syntax = "proto3";

package rivet.backend.pkg.identity_config.version_get;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/identity.proto";

message Request {
	repeated rivet.common.Uuid version_ids = 1;
}

message Response {
	message Version {
		rivet.common.Uuid version_id = 1;
		rivet.backend.identity.VersionConfig config = 2;
		rivet.backend.identity.VersionConfigMeta config_meta = 3;
	}

	repeated Version versions = 1;
}
